--- a/index.html
+++ b/index.html
@@ -5,8 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>first page</title>
+    <link rel="stylesheet" href="./index.css" />
+    <!-- Latest compiled and minified CSS -->
+    <!--<link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />-->
   </head>
   <body>
-    <h1>Hello world</h1>
+    <div class="main">
+      <div class="navbar">
+        <div class="logo">
+          <img
+            src="./images/flipkart.jpg"
+            alt="flipcar logo"
+            height="50px"
+            width="70px"
+          />
+        </div>
+        <div class="searchbar">
+          <input
+            type="text"
+            name="product-search"
+            id="searchbar"
+            placeholder="Search for products, brands and more"
+          />
+        </div>
+        <div class="buttons">
+          <div class="login">
+            <button class="btn btn-login">Login</button>
+          </div>
+          <div class="more">
+            <button class="btn btn-more">More</button>
+          </div>
+          <div class="cart">
+            <button class="btn btn-cart">Cart</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
