adding some updates on deal of the day

--- a/index.html
+++ b/index.html
@@ -45,6 +45,178 @@
           </div>
         </div>
       </div>
+      <div class="categories">
+        <div class="category">
+          <div class="head">
+            <img src="./images/offers.webp" alt="offers" />
+          </div>
+          <p>Top Offers</p>
+        </div>
+        <div class="category">
+          <div class="head">
+            <img src="./images/grocery.webp" alt="grocery" />
+          </div>
+          <p>Grocery</p>
+        </div>
+        <div class="category">
+          <div class="head">
+            <img src="./images/mobiles.webp" alt="Mobiles" />
+          </div>
+          <p>Mobiles</p>
+        </div>
+        <div class="category">
+          <div class="head">
+            <img src="./images/fashion.webp" alt="fashion" />
+          </div>
+          <p>fashion</p>
+        </div>
+        <div class="category">
+          <div class="head">
+            <img src="./images/electronics.webp" alt="Electronics" />
+          </div>
+          <p>Electronics</p>
+        </div>
+        <div class="category">
+          <div class="head">
+            <img src="./images/home.webp" alt="Home" />
+          </div>
+          <p>Home</p>
+        </div>
+        <div class="category">
+          <div class="head">
+            <img src="./images/appliances.webp" alt="Aplliances" />
+          </div>
+          <p>Appliances</p>
+        </div>
+        <div class="category">
+          <div class="head">
+            <img src="./images/travel.webp" alt="travel" />
+          </div>
+          <p>Travel</p>
+        </div>
+        <div class="category">
+          <div class="head">
+            <img src="./images/beauty.webp" alt="Beauty" />
+          </div>
+          <p>Beauty</p>
+        </div>
+      </div>
+      <div class="dotd">
+        <div class="dotd-header">
+          <div class="heading">
+            <h3>Deal of the day</h3>
+            <img src="./images/time.png" alt="timer" />
+          </div>
+          <button class="btn btn-view">View All</button>
+        </div>
+        <div class="dotd-items">
+          <div class="item">
+            <div class="item-img">
+              <img
+                src="./images/watch.webp"
+                alt="watch-img"
+                height="150px"
+                width="100px"
+              />
+            </div>
+            <div class="body">
+              <p class="txt">Casio, Fastrack, Sonata</p>
+              <p class="offer">upto 70% off</p>
+              <p class="tag">Knockout Deals</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item-img">
+              <img
+                src="./images/temple.webp"
+                alt="home-decor-img"
+                height="150px"
+                width="100px"
+              />
+            </div>
+            <div class="body">
+              <p class="txt">Home Decor</p>
+              <p class="offer">extra 10% off</p>
+              <p class="tag">Space Saving Furniture</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item-img">
+              <img
+                src="./images/tabletcases.webp"
+                alt="watch-img"
+                height="150px"
+                width="100px"
+              />
+            </div>
+            <div class="body">
+              <p class="txt">Premium Tablet Cases</p>
+              <p class="offer">Extra 10% off</p>
+              <p class="tag">For All Top Models</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item-img">
+              <img
+                src="./images/homedecor.webp"
+                alt="homedecor-img"
+                height="150px"
+                width="100px"
+              />
+            </div>
+            <div class="body">
+              <p class="txt">Best of Home Decor</p>
+              <p class="offer">from 79 Rupees</p>
+              <p class="tag">Loweset Price ever</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item-img">
+              <img
+                src="./images/dress.jpeg"
+                alt="dress-img"
+                height="150px"
+                width="100px"
+              />
+            </div>
+            <div class="body">
+              <p class="txt">Metronaut, Provague &..</p>
+              <p class="offer">From 249+Extra 10% off</p>
+              <p class="tag">Jackets, Dresses & more</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item-img">
+              <img
+                src="./images/lava1500.webp"
+                alt="watch-img"
+                height="150px"
+                width="100px"
+              />
+            </div>
+            <div class="body">
+              <p class="txt">LAVA A1500</p>
+              <p class="offer">FLAt 830% off</p>
+              <p class="tag">Now 999Rs</p>
+            </div>
+          </div>
+          <div class="item">
+            <div class="item-img">
+              <img
+                src="./images/lava1500.webp"
+                alt="watch-img"
+                height="150px"
+                width="100px"
+              />
+            </div>
+            <div class="body">
+              <p class="txt">LAVA A1500</p>
+              <p class="offer">FLAt 830% off</p>
+              <p class="tag">Now 999Rs</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
