Adding the finalrow of clone

--- a/index.html
+++ b/index.html
@@ -98,125 +98,233 @@
           <div class="head">
             <img src="./images/beauty.webp" alt="Beauty" />
           </div>
-          <p>Beauty</p>
+          <p>Beauty, Toys and More</p>
         </div>
       </div>
-      <div class="dotd">
-        <div class="dotd-header">
-          <div class="heading">
-            <h3>Deal of the day</h3>
-            <img src="./images/time.png" alt="timer" />
+      <section class="ad">
+        <div class="dotd">
+          <div class="dotd-header">
+            <div class="heading">
+              <h3>Deal of the day</h3>
+              <img src="./images/time.png" alt="timer" />
+            </div>
+            <button class="btn btn-view">View All</button>
+          </div>
+          <div class="dotd-items">
+            <div class="item">
+              <div class="item-img">
+                <img
+                  src="./images/watch.webp"
+                  alt="watch-img"
+                  height="150px"
+                  width="100px"
+                />
+              </div>
+              <div class="body">
+                <p class="txt">Casio, Fastrack, Sonata</p>
+                <p class="offer">upto 70% off</p>
+                <p class="tag">Knockout Deals</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-img">
+                <img
+                  src="./images/temple.webp"
+                  alt="home-decor-img"
+                  height="150px"
+                  width="100px"
+                />
+              </div>
+              <div class="body">
+                <p class="txt">Home Decor</p>
+                <p class="offer">extra 10% off</p>
+                <p class="tag">Space Saving Furniture</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-img">
+                <img
+                  src="./images/tabletcases.webp"
+                  alt="watch-img"
+                  height="150px"
+                  width="100px"
+                />
+              </div>
+              <div class="body">
+                <p class="txt">Premium Tablet Cases</p>
+                <p class="offer">Extra 10% off</p>
+                <p class="tag">For All Top Models</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-img">
+                <img
+                  src="./images/homedecor.webp"
+                  alt="homedecor-img"
+                  height="150px"
+                  width="100px"
+                />
+              </div>
+              <div class="body">
+                <p class="txt">Best of Home Decor</p>
+                <p class="offer">from 79 Rupees</p>
+                <p class="tag">Loweset Price ever</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-img">
+                <img
+                  src="./images/dress.jpeg"
+                  alt="dress-img"
+                  height="150px"
+                  width="100px"
+                />
+              </div>
+              <div class="body">
+                <p class="txt">Metronaut, Provague &..</p>
+                <p class="offer">From 249+Extra 10% off</p>
+                <p class="tag">Jackets, Dresses & more</p>
+              </div>
+            </div>
+            <div class="item">
+              <div class="item-img">
+                <img
+                  src="./images/lava1500.webp"
+                  alt="watch-img"
+                  height="150px"
+                  width="100px"
+                />
+              </div>
+              <div class="body">
+                <p class="txt">LAVA A1500</p>
+                <p class="offer">FLAt 830% off</p>
+                <p class="tag">Now 999Rs</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <div class="item-img">
+                <img
+                  src="./images/lava1500.webp"
+                  alt="watch-img"
+                  height="150px"
+                  width="100px"
+                />
+              </div>
+              <div class="body">
+                <p class="txt">LAVA A1500</p>
+                <p class="offer">FLAt 830% off</p>
+                <p class="tag">Now 999Rs</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="new-ad">
+          <img src="./images/advertise.png" alt="addvertise" height="310px" />
+        </div>
+      </section>
+      <section class="books-music">
+        <div class="header">
+          <div class="heading1">
+            <h3>Books and Music Instruments</h3>
+            <p class="text">Shop Now!</p>
           </div>
           <button class="btn btn-view">View All</button>
         </div>
-        <div class="dotd-items">
+        <div class="items">
           <div class="item">
             <div class="item-img">
               <img
-                src="./images/watch.webp"
-                alt="watch-img"
+                src="./images/harmonium.webp"
+                alt="harmonium-img"
                 height="150px"
                 width="100px"
               />
             </div>
             <div class="body">
-              <p class="txt">Casio, Fastrack, Sonata</p>
-              <p class="offer">upto 70% off</p>
-              <p class="tag">Knockout Deals</p>
+              <p class="txt">Harmonium</p>
+              <p class="offer">Upto 60% off</p>
+              <p class="tag">Shop Now!</p>
             </div>
           </div>
           <div class="item">
             <div class="item-img">
               <img
-                src="./images/temple.webp"
-                alt="home-decor-img"
+                src="./images/flute.webp"
+                alt="Flute-img"
                 height="150px"
                 width="100px"
               />
             </div>
             <div class="body">
-              <p class="txt">Home Decor</p>
-              <p class="offer">extra 10% off</p>
-              <p class="tag">Space Saving Furniture</p>
+              <p class="txt">Flute-img</p>
+              <p class="offer">Upto 80% off</p>
+              <p class="tag">Shop Now!</p>
             </div>
           </div>
           <div class="item">
             <div class="item-img">
               <img
-                src="./images/tabletcases.webp"
-                alt="watch-img"
+                src="./images/guitar.webp"
+                alt="harmonium-img"
                 height="150px"
                 width="100px"
               />
             </div>
             <div class="body">
-              <p class="txt">Premium Tablet Cases</p>
-              <p class="offer">Extra 10% off</p>
-              <p class="tag">For All Top Models</p>
+              <p class="txt">guitar</p>
+              <p class="offer">Starting &#8377 1799</p>
+              <p class="tag">Juarez, Revel..</p>
             </div>
           </div>
           <div class="item">
             <div class="item-img">
               <img
-                src="./images/homedecor.webp"
-                alt="homedecor-img"
+                src="./images/musical.webp"
+                alt="muasical-accessories-img"
                 height="150px"
                 width="100px"
               />
             </div>
             <div class="body">
-              <p class="txt">Best of Home Decor</p>
-              <p class="offer">from 79 Rupees</p>
-              <p class="tag">Loweset Price ever</p>
+              <p class="txt">Musical Accessories</p>
+              <p class="offer">Upto 80% off</p>
+              <p class="tag">Shop Now!</p>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="item-img">
+              <img
+                src="./images/mic.jpeg"
+                alt="microphone-img"
+                height="150px"
+                width="100px"
+              />
+            </div>
+            <div class="body">
+              <p class="txt">Microphone Accessories</p>
+              <p class="offer">Upto 80% off</p>
+              <p class="tag">Shop Now!</p>
             </div>
           </div>
           <div class="item">
             <div class="item-img">
               <img
-                src="./images/dress.jpeg"
-                alt="dress-img"
+                src="./images/guitar2.webp"
+                alt="harmonium-img"
                 height="150px"
                 width="100px"
               />
             </div>
             <div class="body">
-              <p class="txt">Metronaut, Provague &..</p>
-              <p class="offer">From 249+Extra 10% off</p>
-              <p class="tag">Jackets, Dresses & more</p>
-            </div>
-          </div>
-          <div class="item">
-            <div class="item-img">
-              <img
-                src="./images/lava1500.webp"
-                alt="watch-img"
-                height="150px"
-                width="100px"
-              />
-            </div>
-            <div class="body">
-              <p class="txt">LAVA A1500</p>
-              <p class="offer">FLAt 830% off</p>
-              <p class="tag">Now 999Rs</p>
-            </div>
-          </div>
-          <div class="item">
-            <div class="item-img">
-              <img
-                src="./images/lava1500.webp"
-                alt="watch-img"
-                height="150px"
-                width="100px"
-              />
-            </div>
-            <div class="body">
-              <p class="txt">LAVA A1500</p>
-              <p class="offer">FLAt 830% off</p>
-              <p class="tag">Now 999Rs</p>
+              <p class="txt">Acoustic Guitars</p>
+              <p class="offer">Starting &#8377 1999</p>
+              <p class="tag">ByRevel</p>
             </div>
           </div>
         </div>
-      </div>
+      </section>
     </div>
   </body>
 </html>
