selectors and positioning

--- a/index1.html
+++ b/index1.html
@@ -29,5 +29,42 @@
         Hello there I am with id and class selector
       </h2>
     </header>
+    <h1>Welcome to My Homepage</h1>
+    <div class="intro">
+      <p>My name is Donald <span id="Lastname">Duck.</span></p>
+      <p id="my-Address">I live in Duckburg</p>
+      <p>I have many friends:</p>
+    </div>
+
+    <ol id="Listfriends">
+      <li>Goofy</li>
+      <li>Mickey</li>
+      <li>Daisy</li>
+      <li>Pluto</li>
+    </ol>
+
+    <p class="myquote">
+      All my friends are great!<br />
+      But I really love pizza.
+    </p>
+
+    <p lang="it" title="Hello beautiful">Ciao bella</p>
+
+    <h3>We are all animals!</h3>
+    <p>
+      <b
+        >My latest discoveries have led me to believe that we are all
+        animals:</b
+      >
+    </p>
+    <div class="positions">
+      <h1>this is to check z -index.</h1>
+      <img src="./images/advertise.png" alt="ad--image" />
+      <p>this is text to test the position.</p>
+      <p>hey there!!!</p>
+    </div>
+    <div class="position1">
+      <img src="./images/appliances.webp" alt="" />
+    </div>
   </body>
 </html>
