adding flexbox , grid and size units example

--- a/index1.html
+++ b/index1.html
@@ -42,7 +42,11 @@
       <li>Daisy</li>
       <li>Pluto</li>
     </ol>
-
+    <div class="size">
+      <p class="size1">Hello world</p>
+      <p class="size2">hello world</p>
+      <p class="size3">hello world</p>
+    </div>
     <p class="myquote">
       All my friends are great!<br />
       But I really love pizza.
@@ -65,6 +69,48 @@
     </div>
     <div class="position1">
       <img src="./images/appliances.webp" alt="" />
+    </div>
+    <div class="flex">
+      <div class="img1 img">
+        <img
+          src="./images/watch.webp"
+          alt="watch img"
+          height="100px"
+          width="100px"
+        />
+      </div>
+      <div class="img1">
+        <img src="./images/electronics.webp" alt="electronics" />
+      </div>
+      <div class="img1">
+        <img src="./images/fashion.webp" alt="fashion" />
+      </div>
+    </div>
+    <div class="grid">
+      <div class="grid-item item2">
+        <h2>hello i am grid 1</h2>
+      </div>
+      <div class="grid-item item4">
+        <h2>hello i am grid 2</h2>
+      </div>
+      <div class="grid-item">
+        <h2>hello i am grid 3</h2>
+      </div>
+      <div class="grid-item">
+        <h2>hello i am grid 4</h2>
+      </div>
+      <div class="grid-item">
+        <h2>hello i am grid 1</h2>
+      </div>
+      <div class="grid-item">
+        <h2>hello i am grid 2</h2>
+      </div>
+      <div class="grid-item item3">
+        <h2>hello i am grid 3</h2>
+      </div>
+      <div class="grid-item">
+        <h2>hello i am grid 4</h2>
+      </div>
     </div>
   </body>
 </html>
