adding another way of css grid

--- a/index1.html
+++ b/index1.html
@@ -112,5 +112,12 @@
         <h2>hello i am grid 4</h2>
       </div>
     </div>
+    <div class="grid-container">
+      <div class="header item">header</div>
+      <div class="aside item">aside</div>
+      <div class="section item">section</div>
+      <div class="section2 item">Section2</div>
+      <div class="footer item">footer</div>
+    </div>
   </body>
 </html>
