--- a/index1.html
+++ b/index1.html
@@ -116,8 +116,12 @@
       <div class="header item">header</div>
       <div class="aside item">aside</div>
       <div class="section item">section</div>
-      <div class="section2 item">Section2</div>
+      <div class="section2 ">Section2</div>
       <div class="footer item">footer</div>
     </div>
+    <div class="animation">
+      <div class="block"></div>
+    </div>
+    <img src="./images/homedecor.webp" alt="">
   </body>
 </html>
