--- a/bootstrap.html
+++ b/bootstrap.html
@@ -16,7 +16,6 @@
     <title>Bootstrap Document</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
     <!-- bootstarp breakpoints -->
     <div class="container-sm">100% wide until small breakpoint</div>
     <div class="container-md">100% wide until medium breakpoint</div>
@@ -25,7 +24,7 @@
     <div class="container-xxl">
       100% wide until extra extra large breakpoint
     </div>
-    <div class="conatiner-fluid"><h1>conatiner-fluid</h1></div>
+    <div class="conatiner-fluid"><h3>conatiner-fluid</h3></div>
     <!-- bootstrap grid system -->
     <div class="container">
       <div class="row">
@@ -52,7 +51,7 @@
       </div>
     </div>
     <!-- alignment of columns  -->
-    <h1>columns with align properties</h1>
+    <h3>columns with align properties</h3>
     <div class="container" height="300px">
       <div class="row align-items-start">
         <div class="col">One of three columns</div>
@@ -70,5 +69,53 @@
         <div class="col">One of three columns</div>
       </div>
     </div>
+    <h3>heading and content with bootstrap</h3>
+    <div class="container">
+      <p class="h1">h1 heading</p>
+      <p class="h2 text-decoration-underline">h2 heading</p>
+      <p class="h3">h3 heading</p>
+      <p class="h4">h4 heaading</p>
+      <p class="h5">h5 heading</p>
+      <p class="h6">h6 heading</p>
+    </div>
+    <h3>image with bootstrap</h3>
+    <img
+      src="./images/dress.jpeg"
+      alt="dress-image"
+      class="img-fluid img-thumbnail rounded"
+    />
+    <h3>bootsrap table</h3>
+    <table
+      class="table table-striped table-primary table-hover table-bordered border-danger"
+    >
+      <thead>
+        <tr>
+          <th>index</th>
+          <th>name</th>
+          <th>handle</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>harsh</td>
+          <td>@0harsh7</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>harsh</td>
+          <td>@0harsh7</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>harsh</td>
+          <td>@0harsh7</td>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td colspan="2" class="table-active">harsh</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
