typod error solved

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -24,7 +24,7 @@
     <div class="container-xxl">
       100% wide until extra extra large breakpoint
     </div>
-    <div class="conatiner-fluid"><h3>conatiner-fluid</h3></div>
+    <div class="container-fluid"><h3>conatiner-fluid</h3></div>
     <!-- bootstrap grid system -->
     <div class="container">
       <div class="row">
