--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
               </div>
               <div class="body">
                 <p class="txt">Best of Home Decor</p>
-                <p class="offer">from 79 Rupees</p>
+                <p class="offer">from 79 &#8377 </p>
                 <p class="tag">Loweset Price ever</p>
               </div>
             </div>
@@ -182,7 +182,7 @@
               </div>
               <div class="body">
                 <p class="txt">Metronaut, Provague &..</p>
-                <p class="offer">From 249+Extra 10% off</p>
+                <p class="offer">From &#8377 249+Extra 10% off</p>
                 <p class="tag">Jackets, Dresses & more</p>
               </div>
             </div>
@@ -198,7 +198,7 @@
               <div class="body">
                 <p class="txt">LAVA A1500</p>
                 <p class="offer">FLAt 830% off</p>
-                <p class="tag">Now 999Rs</p>
+                <p class="tag">Now 999 &#8377 </p>
               </div>
             </div>
 
@@ -214,7 +214,7 @@
               <div class="body">
                 <p class="txt">LAVA A1500</p>
                 <p class="offer">FLAt 830% off</p>
-                <p class="tag">Now 999Rs</p>
+                <p class="tag">Now 999 &#8377 </p>
               </div>
             </div>
           </div>
